# cmp_log_cpp

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig.short  CMakeLists.txt.precomplie.try1  CMakeLists.txt.t1  CMakeLists.txt.t2  ReadMe.txt  _clang-format  _clang-format.llvm  c_hash_cmp.sln  c_hash_cmp_log.sln  c_hash_cmp_log.vcxproj  c_hash_cmp_log.vcxproj.filters  c_hash_cmp_log_vs2017.sln  c_hash_cmp_log_vs2017.vcxproj  c_hash_cmp_vs2017.sln  c_hash_cmp_vs2017.vcxproj  c_hash_cmp_vs2019.vcxproj  c_hash_cmp_vs2019.vcxproj.filters  cmake_install.cmake  doxygen.css  doxygen_default_conifg.txt  main.cpp  main.cpp.old1  main.h  main.h.old1  my_doxygen_config1.txt  other.cpp  pchheader.cpp  pchheader.h  stdafx.cpp  stdafx.h  supportFunctions.cpp  supportFunctions.h  tabs.css  vs15.sln  vs15.vcxproj
ConsoleApplication1/: ConsoleApplication1.vcxproj
UnitTest1/: UnitTest1.vcxproj  unittest1.cpp
example/: boost-options.cpp
include/args/: args.hxx
include/not-used/: InputParser.h  StringUtils.h
include/spdlog/: async_logger.h  common.h  logger.h  spdlog.h  tweakme.h
include/spdlog/details/: async_log_helper.h  async_logger_impl.h  file_helper.h  logger_impl.h  os.h  pattern_formatter_impl.h  registry.h  spdlog_impl.h
include/spdlog/fmt/bundled/: format.cc  format.h  ostream.cc  ostream.h  printf.h
include/spdlog/sinks/: ansicolor_sink.h  base_sink.h  file_sinks.h  sink.h  stdout_sinks.h  syslog_sink.h
measure/: 1.mapping_whole_file.h  2.read_file_by_getline.h  catch2.runsettings  catch2.test1.cpp  load_logfile_with_mmap.sln  load_logfile_with_mmap.vcxproj  load_logfile_with_mmap.vcxproj.bad  load_logfile_with_mmap.vcxproj.filters  planning.txt  stdafx.h
